--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,22 @@
-name: Node.js CI
+name: Run Tests
 
-on:
-  push:
-    branches:
-      - main   # Trigger on push to the main branch
-  pull_request:
-    branches:
-      - main   # Trigger on pull request to the main branch
+on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest   # Use the latest Ubuntu runner
+  test:
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Check out the repository
-      uses: actions/checkout@v2   # Checkout your code
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'   # Specify your Node.js version here
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18' # Change this to match your Node.js version
 
-    - name: Install dependencies
-      run: |
-        npm install  # Install the dependencies
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run tests
-      run: |
-        npm test    # Run your Jest tests
+      - name: Run tests
+        run: npm test
